--- a/Logbook3_1.html
+++ b/Logbook3_1.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 
-<form action="wk3ex1action.php" method="post">
+<form action="Logbook3_1.php" method="post">
    Enter your name
   <input type="text" name="txtname" size="30"/><br/><br/>
    Gender
