--- a/Logbook3_2.html
+++ b/Logbook3_2.html
@@ -3,7 +3,7 @@
     <title>Selection Exercise 1</title>
   </head>
 <body>
-  <form action="wk3ex2action.php" method="post">
+  <form action="Logbook3_2.php" method="post">
     Enter your age :
     <input type="text" name="txtage"/><br/>
     <input type="submit"/>
