--- a/Logbook3_2.html
+++ b/Logbook3_2.html
@@ -8,5 +8,10 @@
     <input type="text" name="txtage"/><br/>
     <input type="submit"/>
   </form>
+  <form action="Logbook3_2.php" method="post">
+    Enter your Gender :
+    <input type ="text" name="txtgender"/><br/>
+    <input type="submit"/>
+  </form>
 </body>
 </html>
