--- a/Logbook3_2.html
+++ b/Logbook3_2.html
@@ -6,6 +6,7 @@
   <form action="Logbook3_2.php" method="post">
     Enter your age :
     <input type="text" name="txtage"/><br/>
+    Enter your Gender:
     <input type ="text" name="txtgender"/><br/>
     <input type="submit"/>
   </form>
