--- a/Logbook3_3.html
+++ b/Logbook3_3.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <form action="Logbook3_3.php" method="post">
-Select your course
+Select your course <br/>
 HNC<input type="radio" name="radcourse" value="HNC"/><br/>
 HND<input type="radio" name="radcourse" value="HND"/><br/>
 BSC<input type="radio" name="radcourse" value="BSC"/><br/>
