--- a/shop.html
+++ b/shop.html
@@ -12,7 +12,7 @@
 		<option>4</option>
 		<option>5</option>
    </select>
-   <input type=“hidden” name=“qty” value="<?php echo $_POST["qty"] ?>" />
+   <input type=“hidden” name=“qty” value="?php echo $_POST["qty"] ?>"/>
    <input type="submit" value="Buy"/>
   </form>
  </body>
