--- a/shop.html
+++ b/shop.html
@@ -16,4 +16,4 @@
   </form>
  </body>
 </html>
-<input type="text" name="txtprice" size="10" value="15.75" readonly />
+<input type="text" name="txtprice" size="10" value="15.75" visible="false" readonly />
