--- a/shop.html
+++ b/shop.html
@@ -14,6 +14,6 @@
    </select>
    <input type="submit" value="Buy"/>
   </form>
+  <input type="text" name="txtprice" size="10" value="15.75" readonly />
  </body>
 </html>
-<input type="text" name="txtprice" size="10" value="15.75" visible="false" readonly />
