--- a/shop.html
+++ b/shop.html
@@ -12,7 +12,7 @@
 		<option>4</option>
 		<option>5</option>
    </select>
-   <input type="text" name="txtprice" size="10" value="15.75" readonly />
+   <input type="hidden" name="txtprice" size="10" value="15.75" readonly />
    <input type="submit" value="Buy"/>
   </form>
  </body>
