--- a/shop.html
+++ b/shop.html
@@ -4,7 +4,7 @@
  </head>
  <body>
   <form  action="selectcolour.php" method="post">
-   Select the qty of widgets you require
+   Select the quantity of widgets you require
    <select name="selqty">
 		<option>1</option>
 		<option>2</option>
