--- a/shop.html
+++ b/shop.html
@@ -3,7 +3,7 @@
   <title>Shopping Page</title>
  </head>
  <body>
-  <form  action="selectcolour.php" method="post">
+  <form  action="size.php" method="post">
    Select the quantity of widgets you require
    <select name="selqty">
 		<option>1</option>
@@ -12,7 +12,6 @@
 		<option>4</option>
 		<option>5</option>
    </select>
-   <input type="text" name="txtprice" size="10" value="15.75" readonly />
    <input type="submit" value="Buy"/>
   </form>
  </body>
