--- a/Logbook6_1.html
+++ b/Logbook6_1.html
@@ -1,7 +1,7 @@
 <html>
 <head></head>
 <body>
-	<form action='wk6ex1action.php' method='post'>
+	<form action='Logbook6_1.php' method='post'>
 	Enter name :
 	<input type='text' name='txtName' /><br/>
 	Enter email :
